# monumenta-charm-eval

./: .clang-format  .clang-tidy  .gitignore  INTERNALS.md  README.md  flake.nix  meson.build  meson_options.txt
bot/: blocking_queue.ts  command.ts  config.ts  data.ts  deploy_commands.ts  eslint.config.mjs  eval_queue.ts  index.ts  log.ts  package-lock.json  package.json
include/: build_config.h.in
include/cli/: cli.h  sv_manip.h
include/common/: aligned_eval.h  charm.h  eval.h
misc/: gen_data.py  zenith_charm_config.json
pch/: pch.h
samples/: charm_dataset.txt  config.conf  flame.conf  sample_charm_dataset.txt
src/: build.h  charm.h  cli.cpp  cli.h  color.h  eval.h  eval_naive.cpp  main.cpp  test_naive.cpp
src/cli/: cli.cpp  main.cpp
src/common/: eval_naive.cpp
src/test/: test_naive.cpp
